--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,29 +1,41 @@
 {
+  "short_name": "Mjorn",
+  "name": "Mjorn Storytelling",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon",
-      "purpose": "any"
-    },
-    {
-      "src": "favicon-16x16.png",
-      "type": "image/png",
-      "sizes": "16x16",
-      "purpose": "any"
+      "sizes": "64x64 48x48 32x32 16x16",
+      "type": "image/x-icon"
     },
     {
       "src": "favicon-32x32.png",
       "type": "image/png",
-      "sizes": "32x32",
-      "purpose": "any"
+      "sizes": "32x32"
+    },
+    {
+      "src": "favicon-48x48.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "favicon-64x64.png",
+      "type": "image/png",
+      "sizes": "64x64"
+    },
+    {
+      "src": "favicon-96x96.png",
+      "type": "image/png",
+      "sizes": "96x96"
     },
     {
       "src": "apple-touch-icon.png",
       "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
+      "sizes": "192x192"
     }
-  ]
+  ],
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#b56006",
+  "background_color": "#ffffff"
 }
 
